# paideia-scraper

./: .flake8  .gitignore  README.md  pyproject.toml
paideia_scraper/: config.py  main.py  mock.py  output.py  scraper.py
secrets/: config.json.example
